--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "predeploy": "npm run build",
