changed package.json name for the github website

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://danovity.github.io/shopify_webdevintern",
-  "name": "shopify_web_dev_intern",
+  "homepage": "http://danovity.github.io/my_github_favorites",
+  "name": "my_github_favorites",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
